--- a/css/responsive.CSS
+++ b/css/responsive.CSS
@@ -231,6 +231,11 @@ textarea {
         width: 100%;
     margin-top: 20px;
   }
+  .inputTex2{
+     width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media (min-height: 990px) {
