--- a/css/stytle.css
+++ b/css/stytle.css
@@ -576,9 +576,7 @@ footer {
   width: 100%;
   display: flex;
   gap: 30px;
-  /* position: relative;
-  top: 0px;
-  left: 0px; */
+
 }
 .About_us {
   width: 33%;
@@ -658,7 +656,7 @@ footer {
   display: flex;
 }
 .loction_1 {
-  width: 33%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   gap: 35px;
@@ -695,17 +693,19 @@ form input {
 }
 
 form {
-  width: 67%;
+  width: 70%;
   display: flex;
   overflow: hidden;
   flex-wrap: wrap;
+  flex-direction: column;
+
 }
 .inputTex {
-  width: 50%;
+  width: 100%;
 }
 .inputTex1 {
-  width: 50%;
-  margin-top: 20px;
+  width: 100%;
+  
 }
 textarea {
   overflow: hidden;
@@ -823,5 +823,10 @@ textarea {
   font-size: 18px;
   font-weight: 600;
   color: #d1ab7f;
+}
+.inputTex2{
+     display: flex;
+    width: 70%;
+    gap: 20px;
 }
 
